--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,11 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-:root {
+
+ /* @media only screen and (min-width: 768px) {} */
+
+
+  :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
