--- a/client/src/pages/CharacterPage.css
+++ b/client/src/pages/CharacterPage.css
@@ -1,11 +1,15 @@
-character-container {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .character-image {
-    width: 300px;
-    height: auto;
-    border-radius: 10px;
-    margin-top: 20px;
-  }
+.character-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px
+}
+
+.character-image {
+  width: 300px;
+  height: auto;
+  border-radius: 10px;
+  margin-top: 20px;
+}
